[update][fix] Fix Button: The reveal border overflow when borderRadius greater than 0.

--- a/packages/common-theme/Button.scss
+++ b/packages/common-theme/Button.scss
@@ -15,6 +15,7 @@
         padding: 2px;
         box-sizing: border-box;
         display: flex;
+        overflow: hidden;
 
         &:hover
         {
